Fix broken alg sheet layout on mobile

--- a/components/AlgSheet.module.css
+++ b/components/AlgSheet.module.css
@@ -39,6 +39,9 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+}
+
+.algImage {
   width: 100px;
   height: 100px;
 }
